Removed L3K's NA values because of sufficient polarity measurements (>= 4).

--- a/summaries/Website/patient_report_feb_2019.Rmd
+++ b/summaries/Website/patient_report_feb_2019.Rmd
@@ -1725,8 +1725,8 @@ L3_K_adj_r_sq <- unlist(lapply(X = c(1:length(L3_K_all)), FUN = function(x){L3_K
 L3K_df_stats <- data.frame(Interval = c("1st", "2nd", "3rd", "4th", "5th", "6th"),
                            R = signif(L3_K_estims, 4),
                            Pval = signif(L3_K_pvalues, 4),
-                           Lower = c(signif(L3_K_lower, 4), NA),
-                           Upper = c(signif(L3_K_upper, 4), NA))
+                           Lower = signif(L3_K_lower, 4),
+                           Upper = signif(L3_K_upper, 4))
 
 L3K_df_stats1 <- data.frame(Interval = c("1st", "2nd", "3rd", "4th", "5th", "6th"),
                            Adj_R_sq = signif(L3_K_adj_r_sq, 4),
